Ndl: Fixed truncation of user name and account names in header menu and tweaked the layout. Fixed library card edit screen header.

--- a/web/interface/themes/ndl/css/768tablet.css
+++ b/web/interface/themes/ndl/css/768tablet.css
@@ -50,9 +50,6 @@
         left:480px;
     }
     
-    .logged-in #nav, .nav {
-        height: 80px;
-    }
     .menuLibCard {
         padding-left:0;
         border-left:0;
